--- a/libs/hc-sr04/pkg.yml
+++ b/libs/hc-sr04/pkg.yml
@@ -20,7 +20,7 @@
 pkg.name: libs/hc-sr04
 pkg.vers: 0.0.0
 pkg.deps:
-    - libs/os
-    - hw/hal
+    - "@apache-mynewt-core/libs/os"
+    - "@apache-mynewt-core/hw/hal"
 pkg.reqs:
 pkg.identities:
